// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoggedOutForm should render 1`] = `
<div>
  <Connect(Localized(AuthFormHeader)) />
  <Connect(Localized(SignupForm))
    disabled={false}
    footerLink={
      <LoggedOutFormLinks>
        <LoggedOutFormLinkItem
          href="https://wordpress.com/wp-login.php?redirect_to=https%3A%2F%2Fexample.com%2F"
        >
          Already have an account? Sign in
        </LoggedOutFormLinkItem>
        <Localized(JetpackConnectHelpButton)
          onClick={[Function]}
        />
      </LoggedOutFormLinks>
    }
    redirectToAfterLoginUrl="https://example.com/"
    submitButtonText="Sign Up and Connect Jetpack"
    submitForm={[Function]}
    submitting={false}
    suggestedUsername=""
  />
</div>
`;

exports[`LoggedOutForm should render with locale suggestions 1`] = `
<div>
  <LocaleSuggestions
    locale="es"
    path="/jetpack/connect/authorize/es"
  />
  <Connect(Localized(AuthFormHeader)) />
  <Connect(Localized(SignupForm))
    disabled={false}
    footerLink={
      <LoggedOutFormLinks>
        <LoggedOutFormLinkItem
          href="https://wordpress.com/wp-login.php?redirect_to=https%3A%2F%2Fexample.com%2F"
        >
          Already have an account? Sign in
        </LoggedOutFormLinkItem>
        <Localized(JetpackConnectHelpButton)
          onClick={[Function]}
        />
      </LoggedOutFormLinks>
    }
    redirectToAfterLoginUrl="https://example.com/"
    submitButtonText="Sign Up and Connect Jetpack"
    submitForm={[Function]}
    submitting={false}
    suggestedUsername=""
  />
</div>
`;
